fixed the overlap on my email input

--- a/styles.css
+++ b/styles.css
@@ -1357,7 +1357,7 @@ svg {
   input.email {
     text-align: center;
     padding: 0;
-    height: 50px;
+    height: 46px;
     width: 100%;
   }
 
@@ -1381,7 +1381,7 @@ svg {
 
   .features__container {
     max-width: 425px;
-    padding: 50px 0;
+    padding: 100px 0;
   }
 
   .features__title {
